tests/fixtures/fail/loop_break_type_mismatch.sc
let main(): i32 = { loop {
  if true {
    break 42
  } else {
    break false
  }
}
}
